refactor: cập nhật quyền truy cập và cải tiến mã
- Thay đổi quyền truy cập trong `MembershipController` từ `isAuthenticated()` thành `hasAnyRole('MANAGER','STAFF')` cho các phương thức `getMembership` và `getMemberships`.
- Cải tiến mã trong `CreateInvoiceCommandHandler` để làm sạch và tối ưu hóa các phương thức xử lý hóa đơn.
- Cập nhật các phương thức trong `GetCustomerByPhoneQueryHandler` và `CalculateOrderCommandHandler` để sử dụng các phương thức lấy giá trị từ đối tượng `Money`.
- Cải thiện mã trong `useMembership.js` để sửa lỗi và tối ưu hóa việc xử lý thông tin thành viên.

Signed-off-by: PNguyen <ngocphunguyenabc@gmail.com>